# assignment4-iic3585

./: .firebaserc  .gitignore  README.md  firebase-messaging-sw.js  firebase.json  package.json
.firebase/: hosting.cHVibGlj.cache
public/: firebase-messaging-sw.js  index.html  index.js  init-firebase.js  manifest.json  manifiest.json  service-worker.js  style.css
server/: app.py  pyproject.toml  requirements.txt
