[tool.poetry]
name = "assignment4-iic3585-server"
version = "0.1.0"
description = ""
authors = ["Daniela Flores <diflores@uc.cl>", "Javiera Jorquera <jtjorquera@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
